# PyTruffle

./: .gitignore  README.md  pyproject.toml
src/pytruffle/: __init__.py
src/pytruffle/test/: test_haystack.py  test_main.py
