[project]
name = "pytruffle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "pydantic>=2.10.4",
]
authors = [
    "Gerhard Stenzel <gerhard.stenzel@ifi.lmu.de>"
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["src/pytruffle/",]
